examples/invalid/03_top_level_offer_forward_value.lane
// invalid: top-level offer may only offer an already available value
offer constants

struct Constants {
  answer : Int
}

let constants : Constants = Constants::{ answer: 42 }
